--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             </div>
             <p class="copy-right">Power by <a href="">Khoa</a></p>
             <div class="back-home">
-                <a href="#header"><i class="fa-solid fa-arrow-up"></i></a>
+                <a href="#"><i class="fa-solid fa-arrow-up"></i></a>
             </div>
         </div>
     </div>
