upload source code

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 <li><a href="#">home</a></li>
                 <li><a href="#about">about</a></li>
                 <li><a href="#album">album</a></li>
-                <!-- <li><a href="">mv</a></li> -->
+                <li><a href="#music-video">mv</a></li>
                 <li><a href="#plink">plink</a></li>
                 <li>
                     <a href="">
                         members
-                        <i class="nav-icon fa-solid fa-arrow-down"></i>
+                        <i class="nav-icon fa-solid fa-caret-down"></i>
                     </a>
                     <ul class="subnav">
                         <li><a href="#jisoo">Jisoo</a></li>
@@ -32,9 +32,6 @@
                         <li><a href="#lisa">Lisa</a></li>
                     </ul>
                 </li>
-                <div class="arrow-down">
-                    <a href="#footer"><i class="nav-icon fa-solid fa-arrow-down"></i></a>
-                </div>
             </ul>
             
         </div>
@@ -43,19 +40,16 @@
         </div>
         <div id="content">
             <!-- Begin: Content - About -->
-            <h1 id="about" class="text-heading">about</h1>
+            <h1 id="about" class="text-heading">blackpink</h1>
             <div class="content-about">
                 <div id="jisoo" class="content-social">
                     <a href="https://www.facebook.com/BlackPinkJisoo.VN/"><i class="social-list fa-brands fa-facebook"></i></a>
                     <a href="https://www.instagram.com/sooyaaa__/"><i class="social-list fa-brands fa-instagram"></i></a>
                 </div>
-                <img src="./assets/img/born jisoo.jpg" alt="" class="member-list">
+                <div class="memberlist"><img src="./assets/img/born jisoo.jpg" alt=""></div>
                 <div class="content-about-text">
-                    <div><p class="about-text">- Nghệ danh: Jisoo</p></div>
-                    <div><p class="about-text">- Tên khai sinh</p></div>
-                    <div><p class="about-text">+ Latinh: Kim Ji-soo</p></div>
-                    <div><p class="about-text">+ Bản ngữ: 김지수</p></div>
-                    <div><p class="about-text">+ Hán Việt: Kim Trí Tú</p></div>
+                    <div><p class="about-text">- Nghệ danh: Jisoo (지수)</p></div>
+                    <div><p class="about-text">- Tên khai sinh: Kim Ji-soo (김지수) </p></div>
                     <div><p class="about-text">- Ngày sinh: 3 tháng 1, 1995 (27 tuổi)</p></div>
                     <div><p class="about-text">- Nơi sinh: Gyeonggi, Hàn Quốc</p></div>
                     <div><p class="about-text">- Quốc tịch: Hàn Quốc</p></div>
@@ -65,49 +59,40 @@
                     <a href="https://www.facebook.com/MandooJennieVN/"><i class="social-list fa-brands fa-facebook"></i></a>
                     <a href="https://www.instagram.com/jennierubyjane/?hl=vi"><i class="social-list fa-brands fa-instagram"></i></a>
                 </div>
-                <img src="./assets/img/born jennie.jpg" alt="" class="member-list">
+                <div class="memberlist"><img src="./assets/img/born jennie.jpg" alt=""></div>
                 <div class="content-about-text">
-                    <div><p class="about-text">- Nghệ danh: Jennie</p></div>
-                    <div><p class="about-text">- Tên khai sinh</p></div>
-                    <div><p class="about-text">+ Latinh: Kim Jennie</p></div>
-                    <div><p class="about-text">+ Bản ngữ: 김제니</p></div>
-                    <div><p class="about-text">+ Hán Việt: Kim Trân Ni</p></div>
-                    <div><p class="about-text">- Ngày sinh: 16 tháng 1, 1996 (26 tuổi)</p></div>
-                    <div><p class="about-text">- Nơi sinh: Seoul, Hàn Quốc</p></div>
-                    <div><p class="about-text">- Quốc tịch: Hàn Quốc</p></div>
-                    <div><p class="about-text">- Vai trò: Rapper, Vocalist, Dancer</p></div>
+                    <p class="about-text">- Nghệ danh: Jennie (제니)</p>
+                    <p class="about-text">- Tên khai sinh: Kim Jennie (김제니)</p>
+                    <p class="about-text">- Ngày sinh: 16 tháng 1, 1996 (26 tuổi)</p>
+                    <p class="about-text">- Nơi sinh: Seoul, Hàn Quốc</p>
+                    <p class="about-text">- Quốc tịch: Hàn Quốc</p>
+                    <p class="about-text">- Vai trò: Rapper, Vocalist, Dancer</p>
                 </div>
                 <div id="rose" class="content-social">
                     <a href="https://www.facebook.com/rosepark1stvn/"><i class="social-list fa-brands fa-facebook"></i></a>
                     <a href="https://www.instagram.com/roses_are_rosie/"><i class="social-list fa-brands fa-instagram"></i></a>
                 </div>
-                <img src="./assets/img/born rose.jpg" alt="" class="member-list">
+                <div class="memberlist"><img src="./assets/img/born rose.jpg" alt=""></div>
                 <div class="content-about-text">
-                    <div><p class="about-text">- Nghệ danh: Rosé</p></div>
-                    <div><p class="about-text">- Tên khai sinh</p></div>
-                    <div><p class="about-text">+ Latinh: Park Chae-young</p></div>
-                    <div><p class="about-text">+ Bản ngữ: 박채영</p></div>
-                    <div><p class="about-text">+ Hán Việt: Phác Thái Anh</p></div>
-                    <div><p class="about-text">- Ngày sinh: 11 tháng 2, 1997 (25 tuổi)</p></div>
-                    <div><p class="about-text">- Nơi sinh: Auckland, New Zealand</p></div>
-                    <div><p class="about-text">- Quốc tịch: Hàn Quốc, Australia, New Zealand</p></div>
-                    <div><p class="about-text">- Vai trò: Vocalist, Dancer</p></div>
+                    <p class="about-text">- Nghệ danh: Rosé (로제)</p>
+                    <p class="about-text">- Tên khai sinh: Park Chae-young (박채영)</p>
+                    <p class="about-text">- Ngày sinh: 11 tháng 2, 1997 (25 tuổi)</p>
+                    <p class="about-text">- Nơi sinh: Auckland, New Zealand</p>
+                    <p class="about-text">- Quốc tịch: Hàn Quốc, Australia, New Zealand</p>
+                    <p class="about-text">- Vai trò: Vocalist, Dancer</p>
                 </div>
                 <div id="lisa" class="content-social">
                     <a href="https://www.facebook.com/profile.php?id=100044397764778"><i class="social-list fa-brands fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/lalalalisa_m/"><i class="social-list fa-brands fa-instagram"></i></a>
+                      <a href="https://www.instagram.com/lalalalisa_m/"><i class="social-list fa-brands fa-instagram"></i></a>
                 </div>
-                <img src="./assets/img/born lisa.jpg" alt="" class="member-list">
+                <div class="memberlist"><img src="./assets/img/born lisa.jpg" alt=""></div>
                 <div class="content-about-text">
-                    <div><p class="about-text">- Nghệ danh: Lisa</p></div>
-                    <div><p class="about-text">- Tên khai sinh</p></div>
-                    <div><p class="about-text">+ Latinh: Lalisa Manobal</p></div>
-                    <div><p class="about-text">+ Bản ngữ: ลลิษา มโนบาล</p></div>
-                    <div><p class="about-text">+ Hán Việt: unknown</p></div>
-                    <div><p class="about-text">- Ngày sinh: 27 tháng 3, 1997 (25 tuổi)</p></div>
-                    <div><p class="about-text">- Nơi sinh: Buriram, Thái Lan[334]</p></div>
-                    <div><p class="about-text">- Quốc tịch: Thái Lan</p></div>
-                    <div><p class="about-text">- Vai trò: Dancer, Rapper, Vocalist</p></div>
+                    <p class="about-text">- Nghệ danh: Lisa (리사)</p>
+                    <p class="about-text">- Tên khai sinh: Lalisa Manobal (ลลิษา มโนบาล)</p>
+                    <p class="about-text">- Ngày sinh: 27 tháng 3, 1997 (25 tuổi)</p>
+                    <p class="about-text">- Nơi sinh: Buriram, Thái Lan</p>
+                    <p class="about-text">- Quốc tịch: Thái Lan</p>
+                    <p class="about-text">- Vai trò: Dancer, Rapper, Vocalist</p>
                 </div>
             </div>
             <!-- End: Content - About -->
@@ -168,6 +153,17 @@
             </div>
             <!-- End: Content - Ablum  -->
 
+            <!-- Begin: Content - MV -->
+            <div id="music-video" class="content-mv">
+                <div class="h-mv">
+                    <h1 class="text-heading">Music Video</h1>
+                    <iframe class="mv" src="https://www.youtube.com/embed/gQlMMD8auMs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="mv" src="https://www.youtube.com/embed/POe9SOEKotk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="mv" src="https://www.youtube.com/embed/vRXZj0DzXIA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    
+                </div>
+            </div>
+
             <!-- Begin: Content - Plink -->
             <div id="plink" class="plink-section">
                 <h1 class="text-heading">plink</h1>
@@ -199,6 +195,7 @@
             <!-- End: Content-Plink -->
         </div>
         <div id="footer">
+            <p class="more-about">More about BLACKPINK</p>
             <div class="social-list">
                 <a href="https://www.ygfamily.com/artist/main.asp?LANGDIV=K&ATYPE=2&ARTIDX=70"><i class="fa-solid fa-house"></i></a>
                 <a href="https://www.facebook.com/BLACKPINKOFFICIAL/"><i class="fa-brands fa-facebook"></i></a>
@@ -209,7 +206,7 @@
             </div>
             <p class="copy-right">Power by <a href="">Khoa</a></p>
             <div class="back-home">
-                <a href="#"><i class="fa-solid fa-arrow-up"></i></a>
+                <a href="#"><i class="fa-solid fa-arrow-up"></i></a>    
             </div>
         </div>
     </div>
