upload source code

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100;1,200&display=swap" rel="stylesheet">
-    <title>BlackPink</title>
+    <title>BLACKPINK</title>
 </head>
 <body>
     <div id="main">
@@ -19,9 +19,9 @@
                 <li><a href="#about">about</a></li>
                 <li><a href="#album">album</a></li>
                 <li><a href="#music-video">mv</a></li>
-                <li><a href="#plink">plink</a></li>
+                <li><a href="#blink">Blink</a></li>
                 <li>
-                    <a href="">
+                    <a href="#album">
                         members
                         <i class="nav-icon fa-solid fa-caret-down"></i>
                     </a>
@@ -164,15 +164,15 @@
                 </div>
             </div>
 
-            <!-- Begin: Content - Plink -->
-            <div id="plink" class="plink-section">
-                <h1 class="text-heading">plink</h1>
+            <!-- Begin: Content - Blink -->
+            <div id="blink" class="plink-section">
+                <h1 class="text-heading">blink</h1>
                 <p class="plink-sub-heading">What do you want to tell us?</p>
                 <div class="plink-content">
                     <div class="plink-info">
                         <p><i class="fa-solid fa-location-pin"></i>Seoul, Hàn Quốc</p>
                         <p><i class="fa-solid fa-phone"></i>Unknown</p>
-                        <p><i class="fa-solid fa-envelope"></i>BlackPink@gmail.com</p>
+                        <p><i class="fa-solid fa-envelope"></i>BLACKPINK@gmail.com</p>
                     </div>
                     <div class="plink-form">
                         <form action="">
