upload source code

--- a/index.html
+++ b/index.html
@@ -14,26 +14,54 @@
 <body>
     <div id="main">
         <div id="header">
-            <ul id="nav">
-                <li><a href="#">home</a></li>
-                <li><a href="#about">about</a></li>
-                <li><a href="#album">album</a></li>
-                <li><a href="#music-video">mv</a></li>
-                <li><a href="#blink">Blink</a></li>
-                <li>
-                    <a href="#album">
-                        members
-                        <i class="nav-icon fa-solid fa-caret-down"></i>
-                    </a>
-                    <ul class="subnav">
-                        <li><a href="#jisoo">Jisoo</a></li>
-                        <li><a href="#jennie">Jennie</a></li>
-                        <li><a href="#rose">Rosé</a></li>
-                        <li><a href="#lisa">Lisa</a></li>
-                    </ul>
-                </li>
-            </ul>
-            
+            <nav class="nav_pc">
+                <ul id="nav">
+                    <li><a href="#">home</a></li>
+                    <li><a href="#about">about</a></li>
+                    <li><a href="#album">album</a></li>
+                    <li><a href="#music-video">mv</a></li>
+                    <li><a href="#blink">Blink</a></li>
+                    <li>
+                        <a href="#album">
+                            members
+                            <i class="nav-icon fa-solid fa-caret-down"></i>
+                        </a>
+                        <ul class="subnav">
+                            <li><a href="#jisoo">Jisoo</a></li>
+                            <li><a href="#jennie">Jennie</a></li>
+                            <li><a href="#rose">Rosé</a></li>
+                            <li><a href="#lisa">Lisa</a></li>
+                        </ul>
+                    </li>
+                </ul>
+             </nav>
+            <input class="nav-input" hidden type="checkbox" name="" id="nav-mobie-input">
+            <label for="nav-mobie-input" class="nav-bars-btn"><i class="fa-solid fa-bars"></i></label>
+            <label for="nav-mobie-input" class="nav-overlay"></label>
+            <nav class="nav_mobie">
+                <!-- <label for="nav-mobie-input" class="nav-mobie-close">
+                    <i class="fa-solid fa-xmark"></i>
+                </label> -->
+                <ul class="nav-mobie-list">
+                    <li><a href="#">home</a></li>
+                    <li><a href="#about">about</a></li>
+                    <li><a href="#album">album</a></li>
+                    <li><a href="#music-video">mv</a></li>
+                    <li><a href="#blink">Blink</a></li>
+                    <li>
+                        <a href="#album">
+                            members
+                            <i class="nav-icon fa-solid fa-caret-down"></i>
+                        </a>
+                        <ul class="subnav-mobie-list">
+                            <li><a href="#jisoo">Jisoo</a></li>
+                            <li><a href="#jennie">Jennie</a></li>
+                            <li><a href="#rose">Rosé</a></li>
+                            <li><a href="#lisa">Lisa</a></li>
+                        </ul>
+                    </li>
+                </ul>
+             </nav>
         </div>
         <div id="slider">
             <img src="./assets/img/pink venom.jpg" alt="">
@@ -115,27 +143,27 @@
             <div class="content-album">
                 <div class="content-album-img">
                     <h1 class="text-heading">Jennie</h1>
+                    <img src="./assets/img/jennie/jennie (23).jpg" alt="" class="album-pic">
                     <img src="./assets/img/jennie/jennie (1).jpg" alt="" class="album-pic">
-                    <img src="./assets/img/jennie/jennie (2).jpg" alt="" class="album-pic">
-                    <img src="./assets/img/jennie/jennie (3).jpg" alt="" class="album-pic">
-                    <img src="./assets/img/jennie/jennie (4).jpg" alt="" class="album-pic">
-                    <img src="./assets/img/jennie/jennie (5).jpg" alt="" class="album-pic">
-                    <img src="./assets/img/jennie/jennie (6).jpg" alt="" class="album-pic">
-                    <img src="./assets/img/jennie/jennie (7).jpg" alt="" class="album-pic">
-                    <img src="./assets/img/jennie/jennie (8).jpg" alt="" class="album-pic">
+                    <img src="./assets/img/jennie/jennie (15).jpg" alt="" class="album-pic">
+                    <img src="./assets/img/jennie/jennie (12).jpg" alt="" class="album-pic">
+                    <img src="./assets/img/jennie/jennie (19).jpg" alt="" class="album-pic">
+                    <img src="./assets/img/jennie/jennie (22).jpg" alt="" class="album-pic">
+                    <img src="./assets/img/jennie/jennie (13).jpg" alt="" class="album-pic">
+                    <img src="./assets/img/jennie/jennie (18).jpg" alt="" class="album-pic">
                 </div>
             </div>
             <div class="content-album">
                 <div class="content-album-img">
                     <h1 class="text-heading">Rosé</h1>
+                    <img src="./assets/img/rose/rose (26).jpg" alt="" class="album-pic">
+                    <img src="./assets/img/rose/rose (32).jpg" alt="" class="album-pic">
+                    <img src="./assets/img/rose/rose (28).jpg" alt="" class="album-pic">
+                    <img src="./assets/img/rose/rose (16).jpg" alt="" class="album-pic">
+                    <img src="./assets/img/rose/rose (23).jpg" alt="" class="album-pic">
+                    <img src="./assets/img/rose/rose (29).jpg" alt="" class="album-pic">
+                    <img src="./assets/img/rose/rose (30).jpg" alt="" class="album-pic">
                     <img src="./assets/img/rose/rose (1).jpg" alt="" class="album-pic">
-                    <img src="./assets/img/rose/rose (4).jpg" alt="" class="album-pic">
-                    <img src="./assets/img/rose/rose (2).jpg" alt="" class="album-pic">
-                    <img src="./assets/img/rose/rose (8).jpg" alt="" class="album-pic">
-                    <img src="./assets/img/rose/rose (9).jpg" alt="" class="album-pic">
-                    <img src="./assets/img/rose/rose (3).jpg" alt="" class="album-pic">
-                    <img src="./assets/img/rose/rose (10).jpg" alt="" class="album-pic">
-                    <img src="./assets/img/rose/rose (11).jpg" alt="" class="album-pic">
                 </div>
             </div>
             <div class="content-album">
@@ -148,7 +176,7 @@
                     <img src="./assets/img/lisa/lisa (10).jpg" alt="" class="album-pic">
                     <img src="./assets/img/lisa/lisa (11).jpg" alt="" class="album-pic">
                     <img src="./assets/img/lisa/lisa (13).jpg" alt="" class="album-pic">
-                    <img src="./assets/img/lisa/lisa (10).jpg" alt="" class="album-pic">
+                    <img src="./assets/img/lisa/lisa (14).jpg" alt="" class="album-pic">
                 </div>
             </div>
             <!-- End: Content - Ablum  -->
@@ -163,6 +191,7 @@
                     
                 </div>
             </div>
+            <!-- End: Content MV -->
 
             <!-- Begin: Content - Blink -->
             <div id="blink" class="plink-section">
@@ -194,6 +223,7 @@
             </div>
             <!-- End: Content-Plink -->
         </div>
+        <!-- Begin: Footer -->
         <div id="footer">
             <p class="more-about">More about BLACKPINK</p>
             <div class="social-list">
@@ -209,6 +239,7 @@
                 <a href="#"><i class="fa-solid fa-arrow-up"></i></a>    
             </div>
         </div>
+        <!-- End: Footer -->
     </div>
 </body>
 </html>
